<resources>
    <string name="app_name">TravelBug</string>
    <string name="facebook_app_id">1792487551031169</string>
    <string name="facebook_app_id_2">1792221031058644</string>
    <string name="travelBugSubtitle">Share your journey with the world</string>
    <string name="travelbug">TravelBug</string>
    <string name="user_image">User image</string>
    <string name="user_name">Hello Emma</string>
    <string name="MyTimelines">My Timelines</string>
    <string name="create_timeline_title">Create Event</string>
    <string name="timeline_title_hint">New Event\'s Text</string>
    <string name="save_timeline">Save</string>
    <string name="title_activity_scrolling_timeline">ScrollingTimelineActivity</string>
    <string name="title_timeline_view">Timeline View</string>
    <string name="photo_desc">Photo</string>
    <string name="action_settings">Settings</string>
    <string name="photo_content">Photo Text</string>
    <string name="event_content">Event_Content</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_share">Share</string>
    <string name="toolBarTextForSharing">Share To</string>
    <string name="shareWithFriends">Share with Friends</string>
    <string name="addToExistingTimeline">Add To Timeline</string>
    <string name="createNewTimeline">Create a new Timeline</string>
    <string name="createNewTimeLineHint">New Timeline\'s name</string>

    <!-- Google Maps API key -->
    <string name="google_maps_api_key">AIzaSyAXNDJ-V3p8Oi-l0oMvP8oY-A76m1eYJj0</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="add_to_a_timeline_below">Add to a timeline below:</string>
    <string name="create_new_timeline">CREATE NEW TIMELINE:</string>
    <string name="new_event_text">new event details</string>
</resources>
