<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_create_timeline"
        tools:context="codepath.travelbug.activities.CreateTimelineActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="470dp"
            tools:srcCompat="@drawable/plane_travel"
            android:id="@+id/ivCameraImage"
            android:scaleType="centerCrop"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/event_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:background="@drawable/gradient_bg"
            android:layout_above="@+id/btnSaveTimeline" />

        <Button
            android:text="@string/save_timeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSaveTimeline"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/textIcons"
            android:background="@color/primary"
            android:textSize="15sp"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_location_icon"
            android:id="@+id/ivLocationIcon"
            android:scaleType="fitXY"
            android:layout_marginStart="15dp"
            android:layout_above="@+id/btnSaveTimeline"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/ic_add_to_existing_timeline"
            android:id="@+id/ivAddToTimeline"
            android:layout_above="@+id/btnSaveTimeline"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/ic_create_new_timeline"
            android:id="@+id/ivCreateNewTimeline"
            android:layout_above="@+id/btnSaveTimeline"
            android:layout_centerHorizontal="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/md_black_1000"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:gravity="center"
            android:id="@+id/eventTitle"
            android:hint="@string/new_event_text"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="30sp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="Santa Clara, United States"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:id="@+id/tvLocation"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/eventTitle"
            android:layout_centerHorizontal="true" />
        <!--<RadioGroup-->
            <!--android:layout_below="@+id/editText"-->
            <!--android:id="@+id/rbGroup"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:checkedButton="@+id/rbCreateNewTimeline"-->
            <!--android:textColor="@color/textIcons">-->
            <!--<RadioButton-->
                <!--android:text="@string/addToExistingTimeline"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/rbAddToTimeline"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_below="@+id/editText"-->
                <!--android:onClick="onRadioButtonClicked"-->
                <!--/>-->
            <!--<RadioButton-->
                <!--android:text="@string/createNewTimeline"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/rbCreateNewTimeline"-->
                <!--android:layout_alignTop="@+id/etTimelineName"-->
                <!--android:layout_alignEnd="@+id/rbGroup"-->
                <!--android:onClick="onRadioButtonClicked"/>-->
        <!--</RadioGroup>-->
        <!--<Spinner-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/spTimelines"-->
            <!--android:layout_alignStart="@+id/etTimelineName"-->
            <!--android:layout_below="@id/editText" />-->
        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/createNewTimeLineHint"-->
            <!--android:textSize="12sp"-->
            <!--android:id="@+id/etTimelineName"-->
            <!--android:layout_below="@+id/spTimelines"-->
            <!--android:layout_marginStart="45dp" />-->
    </RelativeLayout>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab_createNewTimeline"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:elevation="6dp"-->
        <!--android:clickable="true"-->
        <!--android:src="@drawable/ic_create_new_timeline"-->
        <!--android:tint="@color/white"-->
        <!--app:layout_anchor="@id/activity_create_timeline"-->
        <!--app:layout_anchorGravity="bottom|right|end"-->
        <!--app:borderWidth="0dp"-->
        <!--app:rippleColor="@android:color/transparent"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:layout_marginBottom="86dp" />-->

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab_addToExistingTimeline"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:elevation="6dp"-->
        <!--android:clickable="true"-->
        <!--android:src="@drawable/ic_add_to_existing_timeline"-->
        <!--android:tint="@color/white"-->
        <!--app:layout_anchor="@id/activity_create_timeline"-->
        <!--app:layout_anchorGravity="bottom|right|end"-->
        <!--app:borderWidth="0dp"-->
        <!--app:rippleColor="@android:color/transparent"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:layout_marginBottom="16dp" />-->

</android.support.design.widget.CoordinatorLayout>